--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 Department of Mathematics, University of Porto<br>
 Email: eduardomag79 at gmail dot com
 </p>
-
+<p>
+<a href="https://orcid.org/YOUR-ORCID-HERE">ORCID</a>
+</p>
 <h2>Research interests</h2>
 <p>
 Rewriting systems, logic, category theory
