--- a/index.html
+++ b/index.html
@@ -412,8 +412,7 @@
 
           <div class="sep"></div>
 
-          <p>
-I am particularly interested in the interface between logic and category theory, including model theory (both classical and categorical, via accessible categories), semigroup theory and other algebraic structures, and categorical approaches to logic, such as topos-theoretic ideas.          </p>
+          
 
           <div class="chips">
             <span class="chip">Model theory</span>
@@ -446,20 +445,27 @@ I am particularly interested in the interface between logic and category theory,
       <!-- RESEARCH -->
       <section class="card" id="research">
         <div class="sectionTitle">
-          <h2>Research</h2>
+          <h2>Research Interests</h2>
           <span class="hint">topics & directions</span>
         </div>
 
-        <p>
-          My current work includes monoidal rewriting systems (rewriting over arbitrary ambient monoids),
-          categorical structure in rewriting presentations, and model-theoretic questions about semigroups (notably in o-minimal settings).
-        </p>
 
-        <ul class="list">
-          <li>Monoidal rewriting systems (MRS): termination, confluence, and presentations.</li>
-          <li>Categorical approaches to rewriting (2-categorical structure, universal properties).</li>
-          <li>Definable semigroups in o-minimal structures; definable compactness and ideals.</li>
-        </ul>
+I am particularly interested in logic, algebra, and category theory, especially in the ways these areas interact with one another. I am motivated by understanding how different formal frameworks describe similar mathematical phenomena, and what is gained or lost by changing perspective.
+
+
+
+<ul class="list">
+  <li>
+    In logic, I am especially drawn to model theory, both in its classical form and in categorical approaches via accessible categories.
+  </li>
+  <li>
+    From the algebraic perspective, my interests include semigroup theory, as well as questions of decidability in algebra and rewriting systems.
+  </li>
+  <li>
+    Within category theory, I am most interested in its connections with logic, in particular through topos-theoretic ideas.
+  </li>
+</ul>
+        
       </section>
 
       <!-- UPDATES -->
