--- a/index.html
+++ b/index.html
@@ -449,8 +449,7 @@
         </div>
 
 
-I am particularly interested in logic, algebra, and category theory, especially in the ways these areas interact with one another. I am motivated by understanding how different formal frameworks describe similar mathematical phenomena, and what is gained or lost by changing perspective.
-
+I am particularly interested in logic, algebra, and category theory, especially in the ways these areas interact with one another. I am motivated by understanding how similar mathematical phenomena can be approached using different formal frameworks, and in comparing the perspectives these frameworks provide.
 
 
 <ul class="list">
