--- a/index.html
+++ b/index.html
@@ -504,11 +504,11 @@ I am particularly interested in logic, algebra, and category theory, especially 
           </p>
 
           <div class="links" style="margin-top:10px;">
-            <a href="MiniCurso%20Teoria%20de%20Modelos.pdf">Slides (PDF)</a>
+            <a href="teseMestrado.pdf">Thesis (PDF)</a>
           </div>
 
           <div class="links" style="margin-top:10px;">
-            <a href="MiniCurso%20Teoria%20de%20Modelos.pdf">Slides (PDF)</a>
+            <a href="slidesDefesa.pdf">Slides (PDF)</a>
           </div>
         </div>
 
@@ -541,7 +541,7 @@ I am particularly interested in logic, algebra, and category theory, especially 
           <div class="links" style="margin-top:10px;">
             <a href="MiniCurso%20Teoria%20de%20Modelos.pdf">Slides (PDF)</a>
           </div>
-          <p class="small" style="margin-top:8px;">(Note: the slides are in portuguese.)</p>
+          <p class="small" style="margin-top:8px;">(Note: the slides are in portuguese)</p>
         </div>
       </section>
 
