--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ I am particularly interested in logic, algebra, and category theory, especially 
           <ul class="list">
             <li>Linear Algebra</li>
             <li>Abstract Algebra</li>
-            <li>Real Analisys II</li>
+            <li>Real Analysis II</li>
           </ul>
         </div>
 
@@ -537,7 +537,7 @@ I am particularly interested in logic, algebra, and category theory, especially 
           <div class="links" style="margin-top:10px;">
             <a href="MiniCurso%20Teoria%20de%20Modelos.pdf">Slides (PDF)</a>
           </div>
-          <p class="small" style="margin-top:8px;">(Note: the slides are in portuguese)</p>
+          <p class="small" style="margin-top:8px;">(Note: the slides are in Portuguese)</p>
         </div>
       </section>
 
