--- a/index.html
+++ b/index.html
@@ -421,6 +421,27 @@
         </div>
 
         <div>
+
+
+
+        <div class="card" style="padding: 12px;">
+    <img
+      src="image.jpg"
+      style="width:100%; height:auto; display:block; border-radius:14px; border:1px solid var(--border);"
+    />
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+          
           <div class="card" style="padding: 16px;">
             <div class="sectionTitle">
               <h2>Links</h2>
