--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         </div>
 
 
-I am particularly interested in logic, algebra, and category theory, especially in the ways these areas interact with one another. I am motivated by understanding how similar mathematical phenomena can be approached using different formal frameworks, and in comparing the perspectives these frameworks provide.
+I am particularly interested in logic, category theory, and algebra especially in the ways these areas interact with one another. I am motivated by understanding how similar mathematical phenomena can be approached using different formal frameworks, and in comparing the perspectives these frameworks provide.
 
 
 <ul class="list">
@@ -476,11 +476,12 @@ I am particularly interested in logic, algebra, and category theory, especially 
     In logic, I am especially drawn to model theory, both in its classical form and in categorical approaches via accessible categories.
   </li>
   <li>
-    From the algebraic perspective, my interests include semigroup theory, as well as questions of decidability in algebra and rewriting systems.
-  </li>
-  <li>
     Within category theory, I am most interested in its connections with logic, in particular through topos-theoretic ideas.
   </li>
+  <li>
+    From the algebraic perspective, my interests include semigroup theory, as well as questions of decidability in algebra and rewriting systems.
+  </li>
+  
 </ul>
         
       </section>
