--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         </div>
 
 
-I am particularly interested in logic, category theory, and algebra especially in the ways these areas interact with one another. I am motivated by understanding how similar mathematical phenomena can be approached using different formal frameworks, and in comparing the perspectives these frameworks provide.
+I am particularly interested in logic, category theory, algebra and especially in the ways these areas interact with one another. I am motivated by understanding how similar mathematical phenomena can be approached using different formal frameworks, and in comparing the perspectives these frameworks provide.
 
 
 <ul class="list">
